--- a/index.html
+++ b/index.html
@@ -11,26 +11,25 @@
     <main>
         <div class="container">
         <form>
-            <h1>Login</h1>
+            <h1>Cadastro</h1>
             <br>
-            <input type="text" required placeholder="Usuário">
-            <input type="password" required placeholder="Senha">
+            <input type="text" placeholder="Nome completo" id="nome" name="nome">
+            <input type="email" placeholder="Insira seu email" id="email" name="email">
+            <input type="tel" id="telefone" name="telefone">
+            <input type="text" id="cpf" name="cpf">
+            <input type="text" placeholder="Insira seu endereço" id="endereço" name="endereco">
+            <input type="text" id="cep" name="cep">
             <br>
             <button class="submit" submit>
-                Entrar
+                Cadastrar
             </button>
         </form>
-            <p>Entre com sua rede social</p>
-            <button class="tt" submit>
-                Twitter
-            </button>
-            <br>
-            <button class="face" submit>
-                Facebook
-            </button>
-            <a href="#">Esqueceu a senha?</a>
+            <a href="#">Já é cadastrado ?</a>
         </div>
     </main>
-    <script src="./script.js"></script>
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+    <script src="./js/jquery.validate.min.js"></script>
+    <script src="./js/jquery.mask.min.js"></script>
+    <script src="./js/main.js"></script>
 </body>
 </html>
